--- a/test/expected/cdn_option.css
+++ b/test/expected/cdn_option.css
@@ -5,3 +5,15 @@ h1 {
 h2 {
   background-image: url(//my.cdn.example.com/hello.png);
 }
+
+h3 {
+  background-image: url(//cdn.1.test.com/hello.png);
+}
+
+h4 {
+  background-image: url(data:image/png;base64,TEST==);
+}
+
+h5 {
+  background-image: url('data:image/png;base64,TEST==');
+}
