--- a/test/expected/ignore_option.css
+++ b/test/expected/ignore_option.css
@@ -1,13 +1,21 @@
 h1 {
-  background-image: url(hello.png?v=0.2.0);
+  background-image: url(//my.cdn.example.com/tmp/hello.png);
+}
+
+h1 {
+  background-image: url(//my.cdn.example.com/tmp/hello.png);
+}
+
+h1 {
+  background-image: url(no/cdn/hello.png);
 }
 
 h2 {
-  background-image: url('//cdn.1.test.com/hello.png');
+  background-image: url(//my.cdn.example.com/hello.png);
 }
 
 h3 {
-  background-image: url("//cdn.2.test.com/hello.png");
+  background-image: url(//cdn.1.test.com/hello.png);
 }
 
 h4 {
@@ -15,5 +23,5 @@ h4 {
 }
 
 h5 {
-  background-image: url('data:image/png;base64,TEST==');
+  background-image: url(//my.cdn.example.com/img/hello.png);
 }
