--- a/test/expected/cdn_option.css
+++ b/test/expected/cdn_option.css
@@ -23,5 +23,5 @@ h4 {
 }
 
 h5 {
-  background-image: url(//my.cdn.example.com/img/hello.png);
+  background-image: url(//my.cdn.example.com/tmp/img/hello.png);
 }
